<resources>
	<string name="accounts">Accounts</string>
	<string name="blotter">Blotter</string>
	<string name="currencies">Currencies</string>
	<string name="categories">Categories</string>
	<string name="budgets">Budgets</string>
	<string name="projects">Projects</string>
	<string name="ok">OK</string>
	<string name="reset">Reset</string>
	<string name="clear">Clear</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="close">Close</string>
	<string name="edit_account">Edit Account</string>
	<string name="add_account">Add account</string>
	<string name="title">Title</string>
	<string name="payee">Payee</string>
	<string name="currency">Currency</string>
	<string name="add_currency">Add Currency</string>
	<string name="opening_amount">Opening amount</string>
	<string name="limit_amount">Limit amount</string>
	<string name="view">View</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="add_transaction">Add Transaction</string>
	<string name="account">Account</string>
	<string name="category">Category</string>
	<string name="no_transactions">No transactions</string>
	<string name="user_interface">User interface</string>
	<string name="sort_accounts">Sort accounts</string>
	<string name="sort_accounts_summary">Define sort order for accounts list (requires restart)</string>
	<string name="pin_protection">PIN Protection</string>
	<string name="pin_protection_summary">Check to protect access with PIN</string>
	<string name="change_pin">Change PIN</string>
	<string name="change_pin_summary">Change the PIN number</string>
	<string name="protection">Protection</string>
	<string name="transaction_screen">New transaction screen</string>
	<string name="transaction_screen_summary">Preferences for new transaction/transfer screen</string>
	<string name="screen_layout">Screen layout</string>
	<string name="show_location">Show location</string>
	<string name="show_location_summary">Show location drop-down</string>
	<string name="show_location_order">Location order</string>
	<string name="show_location_order_summary">Relative position for the location drop down</string>
	<string name="show_payee">Show payee</string>
	<string name="show_payee_summary">Show payee edit box</string>
	<string name="show_note">Show note</string>
	<string name="show_note_summary">Show note edit box</string>
	<string name="show_note_order">Note order</string>
	<string name="show_note_order_summary">Relative position for the note box</string>
	<string name="show_project">Show project</string>
	<string name="show_project_summary">Show project drop-down</string>
	<string name="show_project_order">Project order</string>
	<string name="show_project_order_summary">Relative position for the project drop-down</string>
	<string name="remember_selection">Remember the selection</string>
	<string name="remember_last_account">Last account</string>
	<string name="remember_last_account_summary">Remember the last selected account</string>
	<string name="remember_last_location">Last location</string>
	<string name="remember_last_location_summary">Remember the last location for the selected category</string>
	<string name="remember_last_project">Last project</string>
	<string name="remember_last_project_summary">Remember the last project for the selected category</string>
	<string name="day_mon">Mon</string>
	<string name="day_tue">Tue</string>
	<string name="day_wed">Wed</string>
	<string name="day_thr">Thu</string>
	<string name="day_fri">Fri</string>
	<string name="day_sat">Sat</string>
	<string name="day_sun">Sun</string>
	<string name="home_screen">Home Screen</string>
	<string name="shortcut_new_transaction">\'New Transaction\' shortcut</string>
	<string name="shortcut_new_transfer">\'New Transfer\' shortcut</string>
	<string name="shortcut_summary">Add the shortcut to the Home Screen</string>
	<string name="use_fixed_layout">Use fixed layout</string>
	<string name="use_fixed_layout_summary">Fix OK/Cancel buttons in the layout</string>
	<string name="gdocs_backup">Google Drive Backup</string>
	<string name="backup_folder">Backup Folder</string>
	<string name="backup_folder_summary">To store backup files create a new folder in My Drive</string>
	<string name="other">Other</string>
	<string name="send_error_reports">Send error reports</string>
	<string name="send_error_reports_summary">Send anonymous error reports to orangesoftware.ru (requires restart)</string>
	<string name="enable_widget">Enable widget</string>
	<string name="enable_widget_summary">Show account total on the widget</string>
	<string name="include_transfers_into_reports">Transfers into reports</string>
	<string name="include_transfers_into_reports_summary">Include transfers into reports</string>
	<string name="ui_language">Locale</string>
	<string name="ui_language_summary">Set language of user interface (requires restart!)</string>
	<string name="restore_missed_scheduled_transactions">Restore missed schedules</string>
	<string name="restore_missed_scheduled_transactions_summary">Missed scheduled transactions will be restored with \'Restored\' status</string>
	<string name="show_picture">Show \'Take picture\'</string>
	<string name="show_picture_summary">Show \'Take picture\' box</string>
    <string name="show_running_balance">Show running balance</string>
    <string name="show_running_balance_summary">Show account running balance in the blotter (requires restart)</string>
    <string name="lock_time">Lock time</string>
    <string name="lock_time_summary">Time to keep main screen active before locking it off</string>
    <string name="pin_protection_lock_transaction">Lock New Transaction\\Transfer</string>
    <string name="pin_protection_lock_transaction_summary">Lock \'New transaction\' and \'New transfer\' screens by PIN</string>
	<string name="flowzr_sync">Flowzr</string>
    <string name="auto_sync_enabled">Enable auto-sync</string>
    <string name="auto_sync_enabled_summary">Push changes every five minutes if any</string>
    <string name="googledrive_upload">Upload pictures</string>
    <string name="googledrive_upload_summary">Upload attached pictures to Google Drive to share with Flowzr</string>
    <string name="googledrive_folder">Google Drive Folder</string>
    <string name="googledrive_folder_summary">Select a Google Drive folder to store the uploaded pictures</string>
    <string name="remember_last_category_for_payee">Last category</string>
    <string name="remember_last_category_for_payee_summary">Remember the last category for the chosen payee (or account if payee is disabled)</string>
    <string name="show_category_in_transfer">Transfer Category</string>
    <string name="show_category_in_transfer_summary">Show category select in New Transfer screen</string>
    <string name="auto_backup_enabled">Enable auto-backup</string>
    <string name="auto_backup_enabled_summary">Backup database daily at the specified time</string>
    <string name="auto_backup_time">Auto-backup time</string>
    <string name="auto_backup_time_summary" formatted="false">Do daily backup at %02d:%02d</string>
    <string name="database_backup">Database Backup</string>
    <string name="database_backup_folder">Backup Folder</string>
    <string name="database_backup_folder_summary">Current database backup folder: %s</string>
    <string name="quick_menu_account_enabled">Accounts quick-menu</string>
    <string name="quick_menu_account_enabled_summary">Enable one-tap menu in the Accounts</string>
    <string name="quick_menu_transaction_enabled">Blotter quick-menu</string>
    <string name="quick_menu_transaction_enabled_summary">Enable one-tap menu in the Blotter</string>
    <string name="dropbox">Dropbox</string>
    <string name="dropbox_authorize">Authorize</string>
    <string name="dropbox_authorize_summary">Allow Financisto to upload files to your Dropbox</string>
    <string name="dropbox_unlink">Unlink</string>
    <string name="dropbox_unlink_summary">Prevent Financisto from uploading files to your Dropbox</string>
    <string name="dropbox_upload_backup">Upload Backups</string>
    <string name="dropbox_upload_backup_summary">Upload database backups to Dropbox</string>
    <string name="dropbox_upload_autobackup">Upload Auto-backups</string>
    <string name="dropbox_upload_autobackup_summary">Upload database auto-backups to Dropbox</string>
    <string name="exchange_rates">Exchange rates</string>
    <string name="category_selector">Category selector</string>
    <string name="use_hierarchical_category_selector">Hierarchical selector</string>
    <string name="use_hierarchical_category_selector_summary">Use hierarchical category selector</string>
    <string name="hierarchical_category_selector_select_child_immediately">Confirm automatically</string>
    <string name="hierarchical_category_selector_select_child_immediately_summary">Confirm child category selection automatically</string>
    <string name="hierarchical_category_selector_income_expense">Income/Expense</string>
    <string name="hierarchical_category_selector_income_expense_summary">Group income and expense categories together</string>
    <string name="collapse_blotter_buttons">Collapse Blotter buttons</string>
    <string name="collapse_blotter_buttons_summary">Group New Transaction/Transfer/Template buttons together (requires restart)</string>
    <string name="show_account_last_transaction_date">Last transaction date</string>
    <string name="show_account_last_transaction_date_summary">Show last transaction date for on accounts list screen (requires restart)</string>
    <string name="accounts_list_screen">Accounts List</string>
    <string name="accounts_list_screen_summary">Preferences for accounts list screen</string>
    <string name="blotter_screen">Blotter</string>
    <string name="blotter_screen_summary">Preferences for blotter screen</string>
    <string name="hide_closed_accounts">Hide closed accounts</string>
    <string name="hide_closed_accounts_summary">Hide or show closed accounts in the accounts list (requires restart)</string>
    <string name="startup_screen">Startup screen</string>
    <string name="startup_screen_summary">Select tab which will be selected on startup</string>
    <string name="show_currency">Show currency</string>
    <string name="show_currency_summary">Show currency selector in new transaction screen</string>
    <string name="show_is_ccard_payment">Show \'Credit Card Payment\'</string>
    <string name="show_is_ccard_payment_summary">Show checkbox to mark credit card payments</string>
    <string name="open_calculator_for_template_transactions">Open Calculator</string>
    <string name="open_calculator_for_template_transactions_summary">Open Calculator for transactions created from template</string>
    <string name="exchange_rate_provider">Exchange Rate Provider</string>
    <string name="exchange_rate_provider_summary">Select provider to download exchange rates</string>
    <string name="openexchangerates_app_id">OpenExchangeRates App ID</string>
    <string name="openexchangerates_app_id_summary">Please register a free account on OpenExchangeRates and provide your App ID</string>
    <string name="pin_protection_haptic_feedback">Haptic feedback</string>
    <string name="pin_protection_haptic_feedback_summary">Enable vibration when tapping pin buttons</string>
    <string name="show_payee_in_transfer">Transfer Payee</string>
    <string name="show_payee_in_transfer_summary">Show payee field in New Transfer screen</string>
    <string name="google_drive_backup_account">Backup account</string>
    <string name="google_drive_backup_account_summary">Choose your Google Drive account</string>
    <string name="google_drive_backup_full_readonly">Full read-only access</string>
    <string name="google_drive_backup_full_readonly_summary">Allows read-only access to all files on your Google Drive.</string>
</resources>